--- a/index.html
+++ b/index.html
@@ -149,5 +149,17 @@
     <footer>
         <p>&copy; 2024 Sami al Majanini</p>
     </footer>
+
+    <script>
+        // JavaScript function to toggle visibility of a section
+        function toggleSection(sectionId) {
+            var section = document.getElementById(sectionId);
+            if (section.style.display === "none") {
+                section.style.display = "block";
+            } else {
+                section.style.display = "none";
+            }
+        }
+    </script>
 </body>
 </html>
