--- a/index.html
+++ b/index.html
@@ -145,15 +145,21 @@
               </a>
             </li>
   
-          </ul>
-  
-        </div>
-  
-      </aside>
-  
-  
-  
-      <div class="main-content">
+        </ul>
+
+      </div>
+
+    </aside>
+
+
+
+
+
+    <!--
+      - #main-content
+    -->
+
+    <div class="main-content">
 
     
         <nav class="navbar">
@@ -171,6 +177,7 @@
               <li class="navbar-item">
                 <button class="navbar-link" data-nav-link>Contact</button>
               </li>
+              
             </ul>
 
         </nav>
@@ -208,196 +215,195 @@
 
 
 
+      <!--
+        - #RESUME
+      -->
 
-    <!--
-      - #RESUME
-    -->
+      <article class="resume" data-page="resume">
 
-    <article class="resume" data-page="resume">
+        <header>
+          <h2 class="h2 article-title">Resume</h2>
+        </header>
 
-      <header>
-        <h2 class="h2 article-title">Resume</h2>
-      </header>
+        <section class="timeline">
 
-      <section class="timeline">
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
 
-        <div class="title-wrapper">
-          <div class="icon-box">
-            <ion-icon name="book-outline"></ion-icon>
+            <h3 class="h3">Education</h3>
           </div>
 
-          <h3 class="h3">Education</h3>
-        </div>
+          <ol class="timeline-list">
 
-        <ol class="timeline-list">
+            <li class="timeline-item">
 
-          <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">University school of the arts</h4>
 
-            <h4 class="h4 timeline-item-title">University school of the arts</h4>
+              <span>2007 — 2008</span>
 
-            <span>2007 — 2008</span>
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
 
-            <p class="timeline-text">
-              Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-              quas molestias
-              exceptur.
-            </p>
+            </li>
 
-          </li>
+            <li class="timeline-item">
 
-          <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">New york academy of art</h4>
 
-            <h4 class="h4 timeline-item-title">New york academy of art</h4>
+              <span>2006 — 2007</span>
 
-            <span>2006 — 2007
+              <p class="timeline-text">
+                Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
+                omnis..
+              </p>
 
+            </li>
 
-            <p class="timeline-text">
-              Ratione voluptatem sequi nesciunt, facere quisquams facere menda ossimus, omnis voluptas assumenda est
-              omnis..
-            </p>
+            <li class="timeline-item">
 
-          </li>
+              <h4 class="h4 timeline-item-title">High school of art and design</h4>
 
-          <li class="timeline-item">
+              <span>2002 — 2004</span>
 
-            <h4 class="h4 timeline-item-title">High school of art and design</h4>
+              <p class="timeline-text">
+                Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
+                magni dolores
+                eos.
+              </p>
 
-            <span>2002 — 2004</span>
+            </li>
 
-            <p class="timeline-text">
-              Duis aute irure dolor in reprehenderit in voluptate, quila voluptas mag odit aut fugit, sed consequuntur
-              magni dolores
-              eos.
-            </p>
+          </ol>
 
-          </li>
+        </section>
 
-        </ol>
+        <section class="timeline">
 
-      </section>
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
 
-      <section class="timeline">
-
-        <div class="title-wrapper">
-          <div class="icon-box">
-            <ion-icon name="book-outline"></ion-icon>
+            <h3 class="h3">Experience</h3>
           </div>
 
-          <h3 class="h3">Experience</h3>
-        </div>
+          <ol class="timeline-list">
 
-        <ol class="timeline-list">
+            <li class="timeline-item">
 
-          <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Creative director</h4>
 
-            <h4 class="h4 timeline-item-title">Creative director</h4>
+              <span>2015 — Present</span>
 
-            <span>2015 — Present</span>
+              <p class="timeline-text">
+                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
+                molestias
+                exceptur.
+              </p>
 
-            <p class="timeline-text">
-              Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-              molestias
-              exceptur.
-            </p>
+            </li>
 
-          </li>
+            <li class="timeline-item">
 
-          <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Art director</h4>
 
-            <h4 class="h4 timeline-item-title">Art director</h4>
+              <span>2013 — 2015</span>
 
-            <span>2013 — 2015</span>
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
 
-            <p class="timeline-text">
-              Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-              quas molestias
-              exceptur.
-            </p>
+            </li>
 
-          </li>
+            <li class="timeline-item">
 
-          <li class="timeline-item">
+              <h4 class="h4 timeline-item-title">Web designer</h4>
 
-            <h4 class="h4 timeline-item-title">Web designer</h4>
+              <span>2010 — 2013</span>
 
-            <span>2010 — 2013</span>
+              <p class="timeline-text">
+                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
+                quas molestias
+                exceptur.
+              </p>
 
-            <p class="timeline-text">
-              Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-              quas molestias
-              exceptur.
-            </p>
+            </li>
 
-          </li>
+          </ol>
 
-        </ol>
+        </section>
 
-      </section>
+        <section class="skill">
 
-      <section class="skill">
+          <h3 class="h3 skills-title">My skills</h3>
 
-        <h3 class="h3 skills-title">My skills</h3>
+          <ul class="skills-list content-card">
 
-        <ul class="skills-list content-card">
+            <li class="skills-item">
 
-          <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Web design</h5>
+                <data value="80">80%</data>
+              </div>
 
-            <div class="title-wrapper">
-              <h5 class="h5">Web design</h5>
-              <data value="80">80%</data>
-            </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 80%;"></div>
+              </div>
 
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 80%;"></div>
-            </div>
+            </li>
 
-          </li>
+            <li class="skills-item">
 
-          <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Graphic design</h5>
+                <data value="70">70%</data>
+              </div>
 
-            <div class="title-wrapper">
-              <h5 class="h5">Graphic design</h5>
-              <data value="70">70%</data>
-            </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 70%;"></div>
+              </div>
 
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 70%;"></div>
-            </div>
+            </li>
 
-          </li>
+            <li class="skills-item">
 
-          <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">Branding</h5>
+                <data value="90">90%</data>
+              </div>
 
-            <div class="title-wrapper">
-              <h5 class="h5">Branding</h5>
-              <data value="90">90%</data>
-            </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 90%;"></div>
+              </div>
 
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 90%;"></div>
-            </div>
+            </li>
 
-          </li>
+            <li class="skills-item">
 
-          <li class="skills-item">
+              <div class="title-wrapper">
+                <h5 class="h5">WordPress</h5>
+                <data value="50">50%</data>
+              </div>
 
-            <div class="title-wrapper">
-              <h5 class="h5">WordPress</h5>
-              <data value="50">50%</data>
-            </div>
+              <div class="skill-progress-bg">
+                <div class="skill-progress-fill" style="width: 50%;"></div>
+              </div>
 
-            <div class="skill-progress-bg">
-              <div class="skill-progress-fill" style="width: 50%;"></div>
-            </div>
+            </li>
 
-          </li>
+          </ul>
 
-        </ul>
+        </section>
 
-      </section>
+      </article>
 
-    </article>
 
       <!--
         - #CONTACT
@@ -445,6 +451,7 @@
     </div>
 
   </main>
+
   <!--
     - custom js link
   -->
