--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
         <div class="sidebar-info">
   
           <figure class="avatar-box">
-            <img src=".\assets\images\my-avatar (2).png" alt="Richard hanrick" width="80">
+            <img src=".\assets\images\my-avatar (2).png" alt="Sami Al Majanini" width="80">
           </figure>
   
           <div class="info-content">
-            <h1 class="name" title="Richard hanrick">Richard hanrick</h1>
+            <h1 class="name" title="Sami Al Majanini">Sami Al Majanini</h1>
   
             <p class="title">Biomedical Engineer </p>
           </div>
@@ -74,7 +74,7 @@
               <div class="contact-info">
                 <p class="contact-title">Email</p>
   
-                <a href="mailto:richard@example.com" class="contact-link">richard@example.com</a>
+                <a href="mailto:samimajanini456@gmail.com" class="contact-link">samimajanini456@gmail.com</a>
               </div>
   
             </li>
@@ -88,7 +88,7 @@
               <div class="contact-info">
                 <p class="contact-title">Phone</p>
   
-                <a href="tel:+12133522795" class="contact-link">+1 (213) 352-2795</a>
+                <a href="tel:+961 71 938 513" class="contact-link">+ 961 71 938 513</a>
               </div>
   
             </li>
