--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="sidebar-info">
   
           <figure class="avatar-box">
-            <img src=".\assets\images\my-avatar (2).png" alt="Sami Al Majanini" width="80">
+            <img src="./assets/images/WhatsApp Image 2024-06-05 at 4.57.27 PM.jpeg" alt="Sami Al Majanini" width="80">
           </figure>
   
           <div class="info-content">
