--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <div class="contact-info">
                 <p class="contact-title">Location</p>
   
-                <address>Sacramento, California, USA</address>
+                <address>Tripoli, Mina, Lebanon</address>
               </div>
   
             </li>
@@ -359,42 +359,36 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Creative director</h4>
+              <h4 class="h4 timeline-item-title">Mashine learning </h4>
 
-              <span>2015 — Present</span>
+              <span>2024 — Present</span>
 
               <p class="timeline-text">
-                Nemo enim ipsam voluptatem blanditiis praesentium voluptum delenit atque corrupti, quos dolores et qvuas
-                molestias
-                exceptur.
+           I have a solid khnowladge in ML Modeling 
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Art director</h4>
+              <h4 class="h4 timeline-item-title">CNN </h4>
 
-              <span>2013 — 2015</span>
+              <span>2013 —  Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+              I have a deep khnowledge in CNN and image segmentation
               </p>
 
             </li>
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">Web designer</h4>
+              <h4 class="h4 timeline-item-title">MATLAB</h4>
 
-              <span>2010 — 2013</span>
+              <span>2020 — Present</span>
 
               <p class="timeline-text">
-                Nemo enims ipsam voluptatem, blanditiis praesentium voluptum delenit atque corrupti, quos dolores et
-                quas molestias
-                exceptur.
+           I have used MATLAB to model complex system in our body
               </p>
 
             </li>
