--- a/index.html
+++ b/index.html
@@ -199,17 +199,14 @@
 
         <section class="about-text">
           <p>
-         Director and UI/UX Designer from Sydney, Australia, working in web development and print media.
-            I enjoy
-            turning complex problems into simple, beautiful and intuitive designs.
+             Passionate Biomedical Engineering student with a keen interest in physics, mathematics, AI, and healthcare. Combining academic excellence with a drive for innovation and social responsibility. Eager to contribute to the industry and explore the intersection of technology, healthcare, and societal advancement. Let's connect and explore exciting possibilities together!
+
+
           </p>
 
           <p>
-            My job is to build your website so that it is functional and user-friendly but at the same time attractive.
-            Moreover, I
-            add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring
-            across your
-            message and identity in the most creative way. I created web design for many famous brand companies.
+            As for humanoid beings, the dream we cherished in our childhood, could we ever see them materialize? 
+            Perhaps it's up to us to engineer them into reality...
           </p>
         </section>
 
