--- a/index.html
+++ b/index.html
@@ -269,6 +269,52 @@
           </ol>
 
 
+
+             </section>
+
+        <section class="timeline">
+
+          <div class="title-wrapper">
+            <div class="icon-box">
+              <ion-icon name="book-outline"></ion-icon>
+            </div>
+
+            <h3 class="h3">Education</h3>
+          </div>
+
+          <ol class="timeline-list">
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">City university Lebanon</h4>
+
+              <span>2019 — Present</span>
+
+              <p class="timeline-text">
+                Biomedical Engineering Diploma
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
+              <h4 class="h4 timeline-item-title">Hadadin high scholl</h4>
+
+              <span>2016 — 2019</span>
+
+              <p class="timeline-text">
+                 life science Diploma
+              </p>
+
+          
+
+       
+
+            </li>
+
+          </ol>
+
+
       <!--
         - #RESUME
       -->
